Enhance layout and styling for footer, top bar, and routing; implement Angular Material theme

--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <mat-toolbar color="primary">
+    <mat-toolbar>
         <button mat-button routerLink="/home" routerLinkActive="active-menu-item">
             <div class="toolbar-icon">
                 <mat-icon>home</mat-icon>
