--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,12 +9,11 @@ mat-sidenav {
 }
 
 .header {
-    margin-bottom: 8px; // Leave space at bottom of toolbar so elevation shadow effect will show
+    margin-bottom: 8px;
 }
 
 // Component content area
 .container {
-    height: 100vh; // Component content fills entire verticle space
     overflow: auto; // Keeps header from scrolling away
     padding: 10px; // Component conent padding around edges
     margin-bottom: 50px; // Matches height of footer so can see all content when scrolling to bottom
