Add initial configuration, interfaces, and components for scripture feature; remove forums component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-        <div class="header">
-            <app-top-bar [title]="title"></app-top-bar>
-        </div>
+        <app-top-bar class="header" [title]="title"></app-top-bar>
 
         <main class="container mat-app-background">
             <router-outlet></router-outlet>
