--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -5,27 +5,27 @@
                 <mat-icon>home</mat-icon>
             </div>
             <div class="toolbar-icon-text">
-                <span>home</span>
+                <span>quick</span>
             </div>
         </button>
 
-        <button mat-button routerLink="/forums" routerLinkActive="active-menu-item">
+        <button mat-button routerLink="/scripture" routerLinkActive="active-menu-item">
             <div class="toolbar-icon">
-                <mat-icon>forums</mat-icon>
+                <mat-icon>manage_search</mat-icon>
             </div>
             <div class="toolbar-icon-text">
-                <span>forums</span>
+                <span>scripture</span>
             </div>
         </button>
 
-        <button mat-button routerLink="/messages" routerLinkActive="active-menu-item">
+        <!-- <button mat-button routerLink="/messages" routerLinkActive="active-menu-item">
             <div class="toolbar-icon">
                 <mat-icon>messages</mat-icon>
             </div>
             <div class="toolbar-icon-text">
                 <span>messages</span>
             </div>
-        </button>
+        </button> -->
 
         <button mat-button (click)="onToggleSidenav()">
             <div class="toolbar-icon">
