--- a/src/app/common/components/footer/footer.component.scss
+++ b/src/app/common/components/footer/footer.component.scss
@@ -4,24 +4,20 @@
     overflow: hide;
     width: 100%;
     height: 56px;
-    border-top: .5px solid #eee;
+    border-top: 1px solid lightgrey;
 }
 
 .footer .mat-toolbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 5px;
     height: 100%;
-    background-color: #dedede;
 }
 
 .footer button {
+    min-width: 100px;
     flex: 1 1 auto;
-    background-color: transparent;
-    border: none;
-    width: 100px;
+    height: 100%;
 }
 
 .footer button:hover {
@@ -38,5 +34,5 @@
 }
 
 .active-menu-item {
-    background-color: #c5cae9 !important;
+    background-color: #b1bdfe !important;
 }
