--- a/src/app/common/components/sidenav/sidenav.component.scss
+++ b/src/app/common/components/sidenav/sidenav.component.scss
@@ -1,3 +1,10 @@
 .menu-text {
     padding-left: 5px;
 }
+
+:host ::ng-deep .mdc-list-item__primary-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
