--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="search-header">
+    <h1>Search Bible Verses</h1>
+    <p>Search for Bible verses by typing in the book name and chapter number.</p>
+    <p>Ex: John 3:16</p>
+</div>
+
+<form class="search-form" [formGroup]="searchForm" (ngSubmit)="search()">
+    <mat-form-field>
+        <mat-label>Search Bible Verses</mat-label>
+        <mat-icon matPrefix>search</mat-icon>
+        <input matInput formControlName="searchInput" />
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit">Search</button>
+
+    @if (chapter) {
+        <div class="search-results">
+            <h2>Search Results</h2>
+            <h3>{{ chapter.reference }}</h3>
+            <div class="search-results-list">
+                <span [innerHtml]="resultVerse"></span>
+            </div>
+        </div>
+    }
+</form>
