--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,8 @@ $myapp-theme: mat.m2-define-light-theme((
 
 @include mat.all-component-themes($myapp-theme);
 
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/rose-red.css";
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
