Refactor footer component to remove sidenav toggle; implement sidenav service for better state management; update Home and Scripture components for translation handling and sidenav functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
             <router-outlet></router-outlet>
         </main>
 
-        <app-footer (sidenavToggle)="sidenav.toggle()"></app-footer>
+        <app-footer></app-footer>
     </mat-sidenav-content>
 </mat-sidenav-container>
