--- a/src/app/features/scripture/scripture.component.html
+++ b/src/app/features/scripture/scripture.component.html
@@ -1,1 +1,8 @@
-<p>scripture works!</p>
+<div class="sidenav-button">
+    <button mat-stroked-button color="accent" (click)="onToggleSidenav()">
+        <mat-icon>arrow_back</mat-icon>
+        Select translation & book
+    </button>
+    
+    <!-- <span>Select translation & book</span> -->
+</div>
