--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -18,21 +18,12 @@
             </div>
         </button>
 
-        <!-- <button mat-button routerLink="/messages" routerLinkActive="active-menu-item">
+        <button mat-button routerLink="/about" routerLinkActive="active-menu-item">
             <div class="toolbar-icon">
-                <mat-icon>messages</mat-icon>
+                <mat-icon>help</mat-icon>
             </div>
             <div class="toolbar-icon-text">
-                <span>messages</span>
-            </div>
-        </button> -->
-
-        <button mat-button (click)="onToggleSidenav()">
-            <div class="toolbar-icon">
-                <mat-icon>more_horiz</mat-icon>
-            </div>
-            <div class="toolbar-icon-text">
-                <span>more</span>
+                <span>about</span>
             </div>
         </button>
     </mat-toolbar>
