Remove Messages component and update routing; enhance Scripture component with translation handling and default selection logic

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -14,7 +14,7 @@
 
     <mat-form-field>
         <mat-label>Select Translation</mat-label>
-        <mat-select formControlName="translation">
+        <mat-select formControlName="translation" (selectionChange)="homeService.search()">
             <mat-option *ngFor="let translation of homeService.bibleTranslations" [value]="translation.identifier">
                 {{ translation.name }}
             </mat-option>
