Refactor HomeService to handle errors during chapter data retrieval; update Scripture component for improved translation selection UI and styling

--- a/src/app/features/scripture/scripture.component.html
+++ b/src/app/features/scripture/scripture.component.html
@@ -1,6 +1,6 @@
 <div class="sidenav-button">
     <button mat-stroked-button color="accent" (click)="onToggleSidenav()">
-        <mat-icon>arrow_back</mat-icon>
+        <mat-icon matSuffix>arrow_back</mat-icon>
         Select translation & book
     </button>
 </div>
