Refactor sidenav component for improved book selection; update Scripture component to handle translation selection with reactive forms

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,9 +4,9 @@ mat-sidenav {
     height: 100vh; // Component content fills entire verticle space
 }
 
-mat-sidenav {
-    width: 40vw; // Width sidenav takes up when open
-}
+// mat-sidenav {
+//     width: 50vw; // Width sidenav takes up when open
+// }
 
 .header {
     width: 100%;
