--- a/src/app/common/components/sidenav/sidenav.component.html
+++ b/src/app/common/components/sidenav/sidenav.component.html
@@ -1,6 +1,10 @@
-<mat-nav-list>
-    <a mat-list-item (click)="onAbout()" (keypress)="onAbout()" tabindex="0">
-        <mat-icon>people</mat-icon>
-        <span class="menu-text">About</span>
-    </a>
-</mat-nav-list>
+<mat-list>
+    <div mat-subheader><h3>Books</h3></div>
+    @for (book of scriptureService.selectedBooks; track book.id) {
+        <mat-list-item>
+            <button mat-stroked-button color="primary" (click)="scriptureService.onBookSelect(book)">
+                {{ book.name }}
+            </button>
+        </mat-list-item>
+    }
+</mat-list>
