--- a/src/app/common/components/sidenav/sidenav.component.scss
+++ b/src/app/common/components/sidenav/sidenav.component.scss
@@ -1,10 +1,9 @@
-.menu-text {
-    padding-left: 5px;
+@use '@angular/material' as mat;
+
+:host {
+    padding: 20px;
 }
 
-:host ::ng-deep .mdc-list-item__primary-text {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+:host mat-list-item button {
+    width: 100%;
 }
