--- a/src/app/features/scripture/scripture.component.scss
+++ b/src/app/features/scripture/scripture.component.scss
@@ -1,3 +1,8 @@
 .sidenav-button {
-    margin-top: 15px;
+    margin: 15px 0;
+}
+
+.select-form mat-form-field {
+    width: 100%;
+    margin-top: 25px;
 }
