--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -1,1 +1,11 @@
-<p>about works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>About</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <p>Version: 1.0.0</p>
+        <p>A simple application for searching and viewing Bible verses.</p>
+        <p>Uses <a href="https://bible-api.com/" target="_blank">bible-api.com</a> for the backend service.</p>
+        <!-- Add more content as needed -->
+    </mat-card-content>
+</mat-card>
