--- a/src/app/common/components/sidenav/sidenav.component.html
+++ b/src/app/common/components/sidenav/sidenav.component.html
@@ -3,21 +3,27 @@
         <div mat-subheader><h3>Books</h3></div>
         @for (book of scriptureService.selectedBooks; track book.id) {
             <mat-list-item>
-                <button mat-stroked-button color="primary" (click)="onBookSelected(book)">
+                <button mat-stroked-button color="primary" [class.active-book]="book.id === scriptureService.selectedBook?.id" (click)="onBookSelected(book)">
                     {{ book.name }}
                 </button>
             </mat-list-item>
         }
     } @else {
         <div mat-subheader>
-             <button mat-stroked-button color="primary" (click)="showChapters.set(false)">
+            <button mat-stroked-button color="primary" class="chapter-button" (click)="showChapters.set(false)">
                 <mat-icon matPrefix>arrow_back</mat-icon>
                 {{ this.scriptureService.selectedBook?.name }}
             </button>
         </div>
         @for (chapter of scriptureService.selectedBookChapters; track chapter.book_id) {
             <mat-list-item>
-                <button mat-stroked-button color="accent" (click)="onChapterSelected(chapter)">Chapter {{ chapter.chapter }}</button>
+                <button
+                    mat-stroked-button
+                    color="accent"
+                    [class.active-chapter]="chapter.book_id === scriptureService.selectedBook?.id && chapter.chapter === scriptureService.selectedChapter?.chapter"
+                    (click)="onChapterSelected(chapter)">
+                    Chapter {{ chapter.chapter }}
+                </button>
             </mat-list-item>
         }
     }
