--- a/src/app/features/scripture/scripture.component.html
+++ b/src/app/features/scripture/scripture.component.html
@@ -1,7 +1,7 @@
 <form class="select-form" [formGroup]="scriptureService.selectForm" (ngSubmit)="scriptureService.onTranslationChange()">
     <mat-form-field appearance="outline">
         <mat-label>Select Translation</mat-label>
-        <mat-select formControlName="translation" (selectionChange)="scriptureService.onTranslationChange()">
+        <mat-select formControlName="translation" (selectionChange)="scriptureService.onTranslationChange()" tabIndex="0">
             @for (translation of scriptureService.bibleTranslations; track translation.identifier) {
                 <mat-option [value]="translation.identifier">
                     {{ translation.name }}
