--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -5,7 +5,11 @@
     <mat-card-content>
         <p>Version: 1.0.1</p>
         <p>A simple application for searching and viewing Bible verses.</p>
-        <p>Uses <a href="https://bible-api.com/" target="_blank">bible-api.com</a> for the backend service.</p>
+        <p>
+            Uses
+            <a href="https://bible-api.com/" target="_blank">bible-api.com</a>
+            for the backend service.
+        </p>
         @if (showInstallButton) {
             <div class="install-pwa-button-container">
                 <button mat-stroked-button color="primary" (click)="installPwa()">Add to Desktop</button>
