Add image to About component and style for responsive display

--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -10,6 +10,9 @@
             <a href="https://bible-api.com/" target="_blank">bible-api.com</a>
             for the backend service.
         </p>
+        <div class="images">
+            <img src="assets/buddy_christ_by_chrisbryer.png">
+        </div>
         @if (showInstallButton) {
             <div class="install-pwa-button-container">
                 <button mat-stroked-button color="primary" (click)="installPwa()">Add to Desktop</button>
