--- a/src/app/features/about/about.component.scss
+++ b/src/app/features/about/about.component.scss
@@ -5,3 +5,13 @@
 .install-pwa-button-container button {
     width: 100%;
 }
+
+.images {
+    height: 24rem;
+    width: 24rem;
+}
+
+.images img {
+    max-height: 100%;
+    max-width: 100%;
+}
