--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -11,7 +11,7 @@
             for the backend service.
         </p>
         <div class="images">
-            <img src="assets/buddy_christ_by_chrisbryer.png">
+            <img src="assets/buddy_christ_by_chrisbryer.png" alt="Not my image" />
         </div>
         @if (showInstallButton) {
             <div class="install-pwa-button-container">
