--- a/src/app/features/about/about.component.scss
+++ b/src/app/features/about/about.component.scss
@@ -7,8 +7,9 @@
 }
 
 .images {
-    height: 24rem;
-    width: 24rem;
+    height: 20rem;
+    width: 20rem;
+    justify-items: center;
 }
 
 .images img {
