Add theme management with dark and light modes; update version to 1.0.1-16

--- a/src/app/common/components/footer/footer.component.html
+++ b/src/app/common/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" [class.dark-theme]="themeService.isDarkTheme">
     <mat-toolbar>
         <button mat-button routerLink="/home" routerLinkActive="active-menu-item">
             <div class="toolbar-icon">
