--- a/src/app/common/components/sidenav/sidenav.component.scss
+++ b/src/app/common/components/sidenav/sidenav.component.scss
@@ -12,8 +12,16 @@
     background-color: #fce8ef !important;
 }
 
+.dark-theme .active-book {
+    background-color: #322e2f !important;
+}
+
 .active-chapter {
     background-color: #dfe4fe !important;
+}
+
+.dark-theme .active-chapter {
+    background-color: #2c2d32 !important;
 }
 
 .chapter-button {
