--- a/src/app/features/scripture/scripture.component.html
+++ b/src/app/features/scripture/scripture.component.html
@@ -13,7 +13,7 @@
 
 @if (scriptureService.selectedBooks) {
     <div class="sidenav-button">
-        <button mat-stroked-button color="accent" (click)="onToggleSidenav()" tabindex="-1">
+        <button mat-stroked-button class="btn-accent" (click)="onToggleSidenav()" tabindex="-1">
             <mat-icon matSuffix>arrow_back</mat-icon>
             <span>Select a book & chapter</span>
         </button>
