--- a/src/app/common/components/top-bar/top-bar.component.html
+++ b/src/app/common/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z4" color="primary">
+<mat-toolbar class="mat-elevation-z4" [class.dark-theme]="themeService.isDarkTheme">
     <div class="toolbar-icon">
         @if (showBackArrow) {
             <mat-icon alt="back arrow">arrow_back</mat-icon>
