--- a/src/app/common/components/footer/footer.component.scss
+++ b/src/app/common/components/footer/footer.component.scss
@@ -6,6 +6,7 @@
     overflow: hide;
     width: 100%;
     height: 56px;
+    border-top: 1px solid var(--mat-sys-outline-variant);
 }
 
 .footer .mat-toolbar {
@@ -13,22 +14,26 @@
     flex-direction: row;
     padding: 0 5px;
     height: 100%;
-    border-top: 1px solid lightgray;
     @include mat.toolbar-overrides(
         (
-            container-background-color: whitesmoke,
-            container-text-color: rgba(0, 0, 0, 0.87)
+            container-background-color: var(--mat-sys-surface),
+            container-text-color: var(--mat-sys-on-surface)
         )
     );
 }
 
 .dark-theme .mat-toolbar {
-    border-top: grey;
     @include mat.toolbar-overrides(
         (
-            container-background-color: grey,
+            container-background-color: var(--mat-sys-surface),
+            container-text-color: var(--mat-sys-on-surface)
         )
     );
+}
+
+.dark-theme .mat-mdc-button:hover,
+.dark-theme .mat-mdc-button:focus {
+    background-color: darkslategray;
 }
 
 .footer button {
@@ -55,5 +60,5 @@
 }
 
 .dark-theme .active-menu-item {
-    color: #d8defe !important;
+    color: #3d5afe !important;
 }
