--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -10,10 +10,12 @@
             <a href="https://bible-api.com/" target="_blank">bible-api.com</a>
             for the backend service.
         </p>
-        <mat-button-toggle-group [(value)]="themeService.theme" #themeToggle="matButtonToggleGroup" (change)="themeService.toggleTheme(themeToggle.value)">
-            <mat-button-toggle value="light">Light Theme</mat-button-toggle>
-            <mat-button-toggle value="dark">Dark Theme</mat-button-toggle>
-        </mat-button-toggle-group>
+        <div class="theme-button-toggle">
+            <mat-button-toggle-group [(value)]="themeService.theme" #themeToggle="matButtonToggleGroup" (change)="themeService.toggleTheme(themeToggle.value)">
+                <mat-button-toggle value="light">Light Theme</mat-button-toggle>
+                <mat-button-toggle value="dark">Dark Theme</mat-button-toggle>
+            </mat-button-toggle-group>
+        </div>
         <div class="images">
             <img src="assets/buddy_christ_by_chrisbryer.png" alt="Not my image" />
         </div>
