--- a/src/app/features/about/about.component.scss
+++ b/src/app/features/about/about.component.scss
@@ -23,6 +23,7 @@
 }
 
 .install-pwa-button-container {
+    margin-top: 1rem;
     width: 100%;
     display: flex;
     justify-content: space-around;
