Refactor about component HTML for improved theme toggle layout and reintroduce install button conditionally

--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -11,18 +11,22 @@
             for the backend service.
         </p>
         <div class="theme-button-toggle">
-            <mat-button-toggle-group [(value)]="themeService.theme" #themeToggle="matButtonToggleGroup" (change)="themeService.toggleTheme(themeToggle.value)">
+            <mat-button-toggle-group
+                [(value)]="themeService.theme"
+                #themeToggle="matButtonToggleGroup"
+                (change)="themeService.toggleTheme(themeToggle.value)">
                 <mat-button-toggle value="light">Light Theme</mat-button-toggle>
                 <mat-button-toggle value="dark">Dark Theme</mat-button-toggle>
             </mat-button-toggle-group>
         </div>
-        @if (showInstallButton) {
-            <div class="install-pwa-button-container">
-                <button mat-stroked-button color="primary" (click)="installPwa()">Add to Desktop</button>
-            </div>
-        }
         <div class="images">
             <img src="assets/buddy_christ_by_chrisbryer.png" alt="Not my image" />
         </div>
     </mat-card-content>
 </mat-card>
+
+@if (showInstallButton) {
+    <div class="install-pwa-button-container">
+        <button mat-stroked-button color="primary" (click)="installPwa()">Add to Desktop</button>
+    </div>
+}
