--- a/src/app/common/components/sidenav/sidenav.component.html
+++ b/src/app/common/components/sidenav/sidenav.component.html
@@ -19,7 +19,7 @@
                 {{ this.scriptureService.selectedBook?.name }}
             </button>
         </div>
-        @for (chapter of scriptureService.selectedBookChapters; track chapter.book_id) {
+        @for (chapter of scriptureService.selectedBookChapters; track chapter.chapter) {
             <mat-list-item>
                 <button
                     mat-stroked-button
